--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -1,4 +1,3 @@
-<div class="alert alert-success" ng-show="loading">UPDATING</div>
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -9,28 +8,32 @@
                     <h4>User Profile</h4>
                 </div>
                 <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
-                            <div class="cropArea">
-                                <img-crop image="myImage" result-image="myCroppedImage"></img-crop>
+                    <form class="form-horizontal" role="form" ng-submit="submit()" id="userForm">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
+
+                                <div class="cropArea">
+                                    <img-crop image="myImage" result-image="myCroppedImage" result-image-size="320"></img-crop>
+                                </div>
+                                <div>
+                                    <label class="btn btn-default btn-file">
+                                        Browse <input accept="image/*" type="file" style="display: block;"
+                                                      id="fileInput" class="form-control">
+                                    </label>
+                                </div>
+                                <img ng-src="{{myCroppedImage}}"/>
                             </div>
-                            <div>
-                                <label class="btn btn-default btn-file">
-                                    Browse <input accept="image/*" type="file" style="display: none;" id="fileInput">
-                                </label>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-xs-12">
-                            <div class="panel-info">
-                                <div class="panel-body">
-                                    <form class="form-horizontal" role="form" ng-submit="submit()" id="userForm"
-                                          name="userForm">
-                                        <div ng-include="'views/user/EditForm.html'"></div>
-                                    </form>
+                            <div class="col-sm-6 col-xs-12">
+                                <div class="panel-info">
+                                    <div class="panel-body">
+                                        <div class="form-horizontal">
+                                            <div ng-include="'views/user/EditForm.html'"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
