--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -8,6 +8,10 @@
     </div>
     <div class="modal-body" id="modal-body">
         <form role="form" ng-submit="sendLink()">
+            <div class="small">
+                <p style="line-height: normal">Please provide email address that you used when you signed up for your GreatStart account.</p>
+                <p style="line-height: normal">We will send you an email that will allow you to reset your password.</p>
+            </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" placeholder="email" id="email" name="email"
@@ -16,9 +20,9 @@
                        ng-model="user.password"/>
                 <input type="hidden" class="form-control" id="confirmPassword" name="conformPassword" value="default"
                        ng-model="user.confirmPassword"/>
-                <button type="submit" class="btn btn-success">Send reset link</button>
-                </div>
             </div>
+            <button type="submit" class="btn btn-success">Send reset link</button>
         </form>
     </div>
+</div>
 </div>
