--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -35,7 +35,7 @@
             </div>
             <div ng-if="authenticated">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown active "><a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <span class="pull-left" style="margin-right:8px; margin-top:-5px;">
                         <img ng-if="currentUser.photo!=null" ng-src="data:image/JPEG;base64,{{currentUser.photo}}"
                              class="img-responsive img-circle" title="UserName"
