--- a/src/main/resources/static/views/user/EditUser.html
+++ b/src/main/resources/static/views/user/EditUser.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -6,6 +7,9 @@
                     <a class="btn btn-edit pull-right" href="#!/user/{{currentUser.id}}">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>User Profile</h4>
+                </div>
+                <div ng-show="error">
+                    <div class="alert alert-danger">ERROR</div>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form" ng-submit="submit()" id="userForm">
