--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -1,4 +1,4 @@
-<div ng-controller="PasswordResetController">
+<div ng-controller="PasswordResetController as controller">
     <div class="modal-header">
         <h4 class="modal-title">Reset password
             <button class="close" type="button" ng-click="close()">
@@ -7,7 +7,7 @@
         </h4>
     </div>
     <div class="modal-body" id="modal-body">
-        <form role="form" ng-submit="sendLink()">
+        <form role="form" ng-submit="controller.submit()">
             <div class="small">
                 <p style="line-height: normal">Please provide email address that you used when you signed up for your GreatStart account.</p>
                 <p style="line-height: normal">We will send you an email that will allow you to reset your password.</p>
@@ -15,13 +15,14 @@
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" placeholder="email" id="email" name="email"
-                       ng-model="user.email" required/>
+                       ng-model="controller.user.email" required/>
                 <input type="hidden" class="form-control" id="password" name="password" value="default"
-                       ng-model="user.password"/>
+                       ng-model="controller.user.password"/>
                 <input type="hidden" class="form-control" id="confirmPassword" name="conformPassword" value="default"
-                       ng-model="user.confirmPassword"/>
+                       ng-model="controller.user.confirmPassword"/>
             </div>
-            <button type="submit" class="btn btn-success">Send reset link</button>
+            <input type="submit" class="btn btn-success" value="Send reset link"/>
+            <pre>{{controller}}</pre>
         </form>
     </div>
 </div>
