--- a/src/main/resources/static/views/main/LoginPage.html
+++ b/src/main/resources/static/views/main/LoginPage.html
@@ -1,6 +1,6 @@
 <div ng-controller="LoginController">
     <div class="modal-header">
-        <h4 class="modal-title">Registration
+        <h4 class="modal-title">Sign in
             <button class="close" type="button" ng-click="close()">
                 <span class="fa fa-close"></span>
             </button>
@@ -24,6 +24,9 @@
             <button type="submit" class="btn btn-success">Login</button>
             <a href="#!/createAccount" class="btn btn-primary" ng-click="close()">
                 <span class="fa fa-user-circle-o"></span> Create an account
+            </a>
+            <a href="" class="btn btn-info" ng-click="forgotPass()">
+                <span class="fa fa-key fa-fw"></span> Forgot password
             </a>
         </form>
     </div>
