--- a/src/main/resources/static/views/investment/ProjectInvestments.html
+++ b/src/main/resources/static/views/investment/ProjectInvestments.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="InvestmentController">
 
     <div class="well" style="max-height: 210px; overflow: auto;">
         <ul ng-repeat="investment in investments"
