--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="InvestmentController">
 
     <div class="well" style="max-height: 210px; overflow: auto;">
         <ul ng-repeat="investment in investments"
@@ -31,7 +31,7 @@
                         </span>
                     </div>
                     <div class="{{investment.paid ? 'hidden' : 'col-xs-1 left'}}">
-                        <button class="btn btn-xs btn-danger">
+                        <button ng-click="deleteInvestment(investment.id)" class="btn btn-xs btn-danger">
                             <span class="glyphicon glyphicon-trash"></span>
                         </button>
                     </div>
