--- a/src/main/resources/static/views/user/EditForm.html
+++ b/src/main/resources/static/views/user/EditForm.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="address" class="col-xs-3 control-label">Phone:</label>
+            <label for="address" class="col-xs-3 control-label">Address:</label>
             <div class="col-xs-9">
                 <input type="text" ng-model="user.address" class="form-control input-md" id="address"/>
             </div>
