--- a/src/main/resources/static/views/investment/ProjectInvestments.html
+++ b/src/main/resources/static/views/investment/ProjectInvestments.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProjectController">
+<div>
 	<h3>Investments</h3>
 	<div style="max-height: 200px; overflow: auto;">
 		<ul ng-repeat="investment in projectInvestments"
