--- a/src/main/resources/static/views/project/EditProject.html
+++ b/src/main/resources/static/views/project/EditProject.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div class="panel panel-success" style="border: 0">
                 <div class="panel-heading" style="background: #f5f5f5;border: 0">
-                    <a class="btn btn-edit pull-right" href="#!/project/{{project.id}}">
+                    <a class="btn btn-edit pull-right"  ng-if="project.id" href="#!/project/{{project.id}}">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>{{!project.id ? 'Create' :'Edit'}} project</h4>
                 </div>
